# clisp

./: .appveyor.yml  .cvsignore  .gitattributes  .gitignore  .hgignore  .hgtags  .travis.yml  00_REPOSITORY_HAS_MOVED  ANNOUNCE  COPYRIGHT  DEPENDENCIES  HACKING  INSTALL  INSTALL.windows  Makefile.devel  Makefile.in  README  SUMMARY  autogen.sh  clisp.lsm  clisp.spec  configure  gnulib-tool.patch  version.sh
ffcall/avcall/: .cvsignore  DOC  Makefile.devel  Makefile.in  Makefile.mingw32  Makefile.msvc  PLATFORMS  README  asmarm.sh  asmi386.h  asmi386.sh  asmsparc64.sh  avcall-alpha.c  avcall-alpha.s  avcall-alpha.s.gcc263  avcall-alpha.s.gcc272  avcall-arm.c  avcall-arm.s  avcall-convex.c  avcall-convex.s  avcall-hppa.c  avcall-hppa.s  avcall-i386-msvc.c  avcall-i386.S  avcall-i386.c  avcall-ia64.c  avcall-m68k-amiga.c  avcall-m68k-amiga.s  avcall-m68k.c  avcall-m68k.mit.S  avcall-m68k.mit.s  avcall-m68k.mot.s  avcall-m68k.s  avcall-m88k.c  avcall-m88k.s  avcall-mips.S  avcall-mips.c  avcall-mips.s  avcall-mips64.S  avcall-mips64.c  (+33 more)
ffcall/callback/: .cvsignore  Makefile.devel  Makefile.in  Makefile.mingw32  Makefile.msvc  PLATFORMS  README  call-used-registers  callback.3  callback.h.in  callback.html  callback.man  configure  configure.in  minitests.c  tests.c
modules/berkeley-db/: Makefile.in  bdb.c  berkeley-db.xml  config.h.in  configure  configure.in  dbi.lisp  ent-bdb.xml  link.sh.in  test.tst
modules/dbus/: Makefile.in  config.h.in  configure  configure.in  dbus.el  dbus.lisp  dbus.xml  link.sh.in  test.tst
modules/dirkey/: Makefile.in  config.h.in  configure  configure.in  dirkey.c  dirkey.xml  dirkey1.lisp  link.sh  link.sh.in
modules/fastcgi/: Makefile.in  README  config.h.in  configure  configure.in  fastcgi.h  fastcgi.lisp  fastcgi.xml  fastcgi_wrappers.c  link.sh  link.sh.in
modules/gdbm/: Makefile.in  config.h.in  configure  configure.in  gdbm.c  gdbm.lisp  gdbm.xml  link.sh.in  preload.lisp  test.tst
modules/gtk2/: Makefile.in  config.h.in  configure  configure.in  gtk-server.cfg  gtk.lisp  gtk.xml  link.sh.in  preload.lisp  ui.glade
modules/i18n/: Makefile.in  config.h.in  configure  configure.in  gettext.c  i18n.lisp  i18n.xml  link.sh.in  test.tst
modules/libsvm/: COPYRIGHT  Makefile  Makefile.in  README  config.h.in  configure  configure.in  libsvm.lisp  link.sh  link.sh.in  preload.lisp  svm.cpp  svm.h  svm.xml  test.tst
modules/oracle/: Makefile.in  README  config.h.in  configure  configure.in  examples.lisp  link.sh  link.sh.in  oiface.c  oiface.h  oracle.lisp  oracle.xml  orafns.c
modules/pari/: Makefile.in  README  config.h.in  configure  configure.in  cpari.c  cpari.h  desc2lisp.lisp  link.sh.in  pari.lisp  pari.xml  test.tst
modules/pcre/: Makefile.in  config.h.in  configure  configure.in  cpcre.c  link.sh.in  pcre.lisp  pcre.xml  test.tst
modules/postgresql/: Makefile.in  README  config.h.in  configure  configure.in  link.sh.in  postgresql.lisp  postgresql.xml  sql.lisp  test.tst
modules/rawsock/: Makefile.in  config.h.in  configure  configure.in  link.sh.in  preload.lisp  rawsock.c  rawsock.xml  sock.lisp  test.tst
modules/readline/: Makefile.in  config.h.in  configure  configure.in  link.sh.in  readline.lisp  readline.xml  test.tst
modules/regexp/: Makefile.in  README  config.h.in  configure  configure.in  link.sh  link.sh.in  regex.c  regexi.c  regexp.lisp  regexp.lsp  regexp.texinfo  regexp.xml  test.tst
modules/syscalls/: Makefile.in  README  bogomips.c  calls.c  config.h.in  configure  configure.in  datemsk  link.sh  link.sh.in  posix.lisp  preload.lisp  syscalls.xml  test.tst
modules/wildcard/: Makefile.in  README  config.h.in  configure  configure.in  link.sh  link.sh.in  test.tst  wildcard.lisp  wildcard.texinfo  wildcard.xml
modules/zlib/: Makefile.in  config.h.in  configure  configure.in  link.sh.in  test.tst  zlib.lisp  zlib.xml
sigsegv/: .cvsignore  ChangeLog  Makefile.devel  Makefile.in  Makefile.msvc  NEWS  README  config.h.in  configure  configure.in  dispatcher.c  handler.c  sigsegv.h.in  test1.c  test2.c  test3.c
sigsegv/autoconf/: acgeneral.m4  aclocal.m4  acspecific.m4  ltconfig
sigsegv/m4/: getpagesize.m4  ln.m4  memset.m4  mprotect.m4  openflags.m4  sigaltstack.m4  signal.m4  vadvise.m4
src/: .clisp  .clisp-full  .cvsignore  .gdbinit  ChangeLog  CodingStyle  FILES  FILES.1  HISTORY  NEWS  TODO  VERSION  _README  _README.de  _README.en  _README.es  _clisp.1  _clisp.c  _clisp.html  _distmakefile  _impnotes.html  _impnotes.txt  aclocal.m4  acorn.d  acornaux.d  acornsig.d  affi.d  affi1.lisp  affi1.lsp  amiga.d  amiga2.d  amigaaux.d  amigasock.lisp  amigasock.lsp  analyse-funtab.lisp  ari68000.d  ari68020.d  ari80386.d  ari80386.msvc.c  ari_asm_arm-macro.c  (+477 more)
src/autoconf/: acgeneral.m4  aclocal.m4  acselect  acspecific.m4  config.sub
src/build-aux/: .cvsignore  README  config.dynamic  ltmain.sh
src/gettext/: .cvsignore  ChangeLog  Makefile.devel  acconfig.h  aclocal.m4  config.h.in  configure  configure.in
src/gllib/: Makefile.am  Makefile.in  README  alloca.in.h  arpa_inet.in.h  config.charset  errno.in.h  fnmatch_loop.c  fseeko.c  iswblank.c  langinfo.in.h  libunistring.valgrind  malloca.c  malloca.h  netinet_in.in.h  regcomp.c  regex_internal.c  regex_internal.h  regexec.c  setenv.c  stdalign.in.h  stdbool.in.h  stddef.in.h  stdint.in.h  stdlib.in.h  streq.h  string.in.h  strptime.c  strverscmp.c  sys_ioctl.in.h  sys_select.in.h  sys_socket.in.h  sys_time.in.h  sys_uio.in.h  sys_utsname.in.h  sys_wait.in.h  time_rz.c  tzset.c  uniname.in.h  unistd.in.h  (+4 more)
src/glm4/: README  getloadavg.m4  gnulib-cache.m4  gnulib-comp.m4  lib-link.m4  lib-prefix.m4
src/m4/: .cvsignore  abort.m4  access.m4  address.m4  alloca.m4  as-underscore.m4  bold.m4  builtin_strlen.m4  c++-bool.m4  c++.m4  caddr_t.m4  cc-ansi.m4  cc-char-unsigned.m4  cc-elif.m4  cc-ema.m4  cc-error.m4  cc-gcc.m4  cc-mergestrings.m4  cc-sunpro.m4  cc-void.m4  chdir.m4  chmod.m4  clisp.m4  closedir.m4  connect.m4  dir.m4  dynload.m4  eloop.m4  execl.m4  execv.m4  fcntl.m4  fenv_default.m4  ffcall-codeexec.m4  ffcall-smallstruct.m4  (+88 more)
(+1344 files in other folders)
