dnl  AUTOCONF configuration for AVCALL
dnl  Bruno Haible 7.11.1997
dnl
AC_INIT(avcall.h.in)
AC_CONFIG_HEADER(avcall.h)
AC_PROG_CC
AC_PROG_CPP
AC_PROG_GCC_TRADITIONAL
CL_AS_UNDERSCORE
CL_PROG_RANLIB
AC_PROG_MAKE_SET
CL_PROG_INSTALL
CL_CANONICAL_HOST(../autoconf)
CL_CANONICAL_HOST_CPU
CL_PCC_STRUCT_RETURN
CL_SMALL_STRUCT_RETURN
CL_LONGLONG
AC_OUTPUT(Makefile)
