dnl  AUTOCONF configuration for AVCALL
dnl  Bruno Haible 2000-04-02
dnl
AC_INIT(avcall.h.in)
AC_CONFIG_HEADER(avcall.h)
AC_PROG_CC
AC_PROG_CPP
AC_PROG_GCC_TRADITIONAL
CL_CC_GCC
CL_AS_UNDERSCORE
AC_PROG_RANLIB
AC_PROG_MAKE_SET
AC_CONFIG_AUX_DIR(../build-aux)
AC_PROG_INSTALL
CL_PROG_CP
CL_PROG_LN
CL_CANONICAL_HOST_CPU_FOR_FFCALL
PACKAGE=avcall
CL_FFCALL_COMMON_LIBTOOL
CL_PCC_STRUCT_RETURN
CL_SMALL_STRUCT_RETURN
CL_IREG_FLOAT_RETURN
AC_TYPE_LONG_LONG_INT
AC_OUTPUT(Makefile)
