dnl  AUTOCONF configuration for CALLBACK
dnl  Bruno Haible 25.10.1995
dnl
AC_INIT(trampoline_r/trampoline_r.h.in)
AC_PROG_CC
AC_PROG_CPP
AC_PROG_GCC_TRADITIONAL
CL_CC_GCC
CL_PROG_RANLIB
AC_PROG_MAKE_SET
CL_PROG_INSTALL
AC_PROG_LN_S
CL_CANONICAL_HOST(../autoconf)
CL_CANONICAL_HOST_CPU_FOR_FFCALL
dnl This piece of sed script replaces every line containing '@subdir@'
dnl by several consecutive lines, each referencing one subdir.
extrasub="$extrasub"'
/@subdir@/{
h
g
s/@subdir@/vacall_r/
p
g
s/@subdir@/trampoline_r/
p
d
}
'
AC_OUTPUT(Makefile)
AC_OUTPUT_SUBDIRS(vacall_r trampoline_r)
