dnl  AUTOCONF configuration for CALLBACK
dnl  Bruno Haible 2000-04-02
dnl
AC_INIT(trampoline_r/trampoline_r.h.in)
AC_PROG_CC
AC_PROG_CPP
AC_PROG_GCC_TRADITIONAL
CL_CC_GCC
AC_PROG_RANLIB
AC_PROG_MAKE_SET
AC_CONFIG_AUX_DIR(../build-aux)
AC_PROG_INSTALL
CL_PROG_CP
CL_PROG_LN
CL_PROG_LN_S
CL_CANONICAL_HOST_CPU_FOR_FFCALL
PACKAGE=callback
CL_FFCALL_COMMON_LIBTOOL
dnl This piece of sed script replaces every line containing '@subdir@'
dnl by several consecutive lines, each referencing one subdir.
extrasub="$extrasub"'
/@subdir@/{
h
g
s/@subdir@/vacall_r/
p
g
s/@subdir@/trampoline_r/
p
d
}
'
CL_CONFIG_SUBDIRS(vacall_r trampoline_r)
AC_OUTPUT(Makefile)
