dnl AUTOCONF configuration for dbus
dnl Copyright (C) 2008 Sam Steingold <sds@gnu.org>
dnl GNU GPL2+

AC_PREREQ(2.57)
AC_INIT(dbus, 1.0, clisp-list)
AC_CONFIG_SRCDIR(dbus.lisp)
AC_CONFIG_HEADERS(config.h)

RSE_BOLD
BOLD_MSG([Dbus (Common)])
if test $cl_cv_have_ffcall = no; then
  AC_MSG_ERROR([module Dbus requires FFI])
fi
CL_MODULE_COMMON_CHECKS

BOLD_MSG([Dbus (Headers and Libraries)])
PKG_CHECK_MODULES(DBUS, dbus-1 >= 1.0,,[AC_MSG_ERROR([cannot find D-Bus])])
AC_SUBST(DBUS_CFLAGS)
AC_SUBST(DBUS_LIBS)
AC_LIB_APPENDTOVAR([LIBS], [$DBUS_LIBS])
AC_LIB_APPENDTOVAR([CFLAGS], [$DBUS_CFLAGS])

BOLD_MSG([Dbus (Output)])
AC_CONFIG_FILES(Makefile link.sh)
AC_OUTPUT

BOLD_MSG([Dbus (Done)])
